Do not render frames if WebMediaPlayerMSCompositor has not started.

This CL makes WebMediaPlayerMSCompositor return null if it has never
started, even if it has a frame available to deliver.

This fixes the problem of paused media elements rendering frames when
they have a MediaStream assigned.

Bug: 817346
Change-Id: Ie0ddfc92e1ba8f82b2ec0a463f8bebaaf1592926
Reviewed-on: https://chromium-review.googlesource.com/966901
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Reviewed-by: Emircan Uysaler <emircan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544421}
Former-commit-id: 81866e04ef43113fc195c539b291dd4d95a3d341